completed styling the first section

--- a/index.html
+++ b/index.html
@@ -9,23 +9,46 @@
 </head>
 <body>
     <section class="header">
-        <nav>
+        <div class="nav">
             <ul>
-                <div class="left-links"><li><a href="#">Header Logo</a></li></div>
+                <div class="left-links">
+                    <li><a href="index.html">Coffee Shop</a></li>
+                </div>
                 <div class="right-links">
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">haeder link three</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contacts</a></li>
                 </div>
             </ul>
-        </nav>
-        <div class="text">This website is awesome
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione aspernatur recusandae officia! Rerum minus error nostrum, quia cum ipsam fugiat, illo, expedita vel pariatur incidunt perspiciatis est saepe veniam. Unde.
         </div>
-        <button>Sign up</button>
-        <div class="img">
-            <img src="#" alt="#">
+        <div class="content">
+            <div class="Description">
+            <p>Art Kaffee, The best  in Town</p>
+            <p>"Located in the heart of town, our coffee shop stands out as the epitome of caffeinated bliss. </p>
+            <button id="bt-content">Order</button>
+            </div>
+            <img src="images/coffeeshop.jpeg" alt="A picture of a coffee shop">
         </div>
     </section>
+    <section>
+        <img src="images/breakfast.png" alt="picture of breakfast" class="menu-img">
+        <img src="images/tee.jpeg" alt="a cup of tea" class="menu-img">
+        <img src="images/icetee.jpeg" alt="ice tea" class="menu-img">
+        <img src="images/latte.jpeg" alt="a mug of latte" class="menu-img">
+        
+    </section>
+    <section class="customer-feedback">
+        <img src="images/customer.jpeg" alt="picture of a customer">
+        <div></div>
+    </section>
+    <section class="orde-up-call">
+        <div>
+            Order yours Today!
+        </div>
+        <button>Order</button>
+    </section>
+    <footer>
+        copyright The Odin Project 2021
+    </footer>
 </body>
 </html>
