addded images to the 2nd section and resized them

--- a/index.html
+++ b/index.html
@@ -27,18 +27,21 @@
             <p>"Located in the heart of town, our coffee shop stands out as the epitome of caffeinated bliss. </p>
             <button id="bt-content">Order</button>
             </div>
-            <img src="images/coffeeshop.jpeg" alt="A picture of a coffee shop">
+            <img src="images/kaffeeshop.jpeg" alt="A picture of a coffee shop">
         </div>
     </section>
     <section>
         <img src="images/breakfast.png" alt="picture of breakfast" class="menu-img">
+        <div class="text">"Breakfast: a delightful start to the day, fueling body and mind with a scrumptious array of morning delights." </div>
         <img src="images/tee.jpeg" alt="a cup of tea" class="menu-img">
+        <div class="text"></div>
         <img src="images/icetee.jpeg" alt="ice tea" class="menu-img">
+        <div class="text"></div>
         <img src="images/latte.jpeg" alt="a mug of latte" class="menu-img">
-        
+        <div class="text"></div>
     </section>
     <section class="customer-feedback">
-        <img src="images/customer.jpeg" alt="picture of a customer">
+        <img src="images/customer1.jpeg" alt="picture of a customer">
         <div></div>
     </section>
     <section class="orde-up-call">
