--- a/index.html
+++ b/index.html
@@ -30,15 +30,23 @@
             <img src="images/kaffeeshop.jpeg" alt="A picture of a coffee shop">
         </div>
     </section>
-    <section>
+    <section class="menu">
+        <div class="info">
         <img src="images/breakfast.png" alt="picture of breakfast" class="menu-img">
         <div class="text">"Breakfast: a delightful start to the day, fueling body and mind with a scrumptious array of morning delights." </div>
+        </div>
+        <div class="info">
         <img src="images/tee.jpeg" alt="a cup of tea" class="menu-img">
-        <div class="text"></div>
+        <div class="text">Tea: a soothing and aromatic beverage that embraces moments of tranquility and relaxation</div>
+        </div>
+        <div class="info">
         <img src="images/icetee.jpeg" alt="ice tea" class="menu-img">
-        <div class="text"></div>
+        <div class="text">Iced tea: a refreshing and revitalizing twist on the classic beverage, perfect for beating the heat and enjoying moments of cool relaxation."</div>
+        </div>
+        <div class="info">
         <img src="images/latte.jpeg" alt="a mug of latte" class="menu-img">
-        <div class="text"></div>
+        <div class="text">Latte: a creamy and indulgent coffee creation, combining the richness of espresso with velvety steamed milk for a luxurious and satisfying experience</div>
+        </div>
     </section>
     <section class="customer-feedback">
         <img src="images/customer1.jpeg" alt="picture of a customer">
