styled all the sections and added background color

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="content">
             <div class="Description">
-            <p>Art Kaffee, The best  in Town</p>
+            <p id="hero">Art Kaffee, The best  in Town</p>
             <p>"Located in the heart of town, our coffee shop stands out as the epitome of caffeinated bliss. </p>
             <button id="bt-content">Order</button>
             </div>
@@ -50,16 +50,24 @@
     </section>
     <section class="customer-feedback">
         <img src="images/customer1.jpeg" alt="picture of a customer">
-        <div></div>
-    </section>
-    <section class="orde-up-call">
         <div>
-            Order yours Today!
+            <blockquote>"I recently visited this coffee shop and was blown away by the quality of their brews and the friendliness of their staff. 
+            The cozy ambiance and delicious pastries made it the perfect spot for a relaxing morning break - 
+            I'll definitely be coming back soon!" 
+            <br>
+            <br>
+            <cite>Thor god of Thunder</cite>
+            </blockquote>
+        </div>
+    </section>
+    <section class="order-up-call">
+        <div >
+            Order yours Today &#x1F600;
         </div>
         <button>Order</button>
     </section>
     <footer>
-        copyright The Odin Project 2021
+        copyright&copy; The Odin Project 2021
     </footer>
 </body>
 </html>
